Mut4All/bug-labels/rust/A-closures/80978.txt
Issue Title:
ICE:panicked at 'expected `NodeId` to be lowered already for res Local(NodeId(14), )', compiler/rustc_ast_lowering/src/lib.rs:710:17 · Issue #80978 · rust-lang/rust · GitHub

Rust Code:
fn main() {
    |arg| -> arg {}
}

Bug Trace:
error[E0573]: expected type, found local variable `arg`
 --> perses_node_priority_with_dfs_delta_reduced_mutant.rs:2:14
  |
2 |     |arg| -> arg {}
  |              ^^^ not a type

thread 'rustc' panicked at 'expected `NodeId` to be lowered already for res Local(
    NodeId(14),
)', compiler/rustc_ast_lowering/src/lib.rs:710:17
stack backtrace:
   0: rust_begin_unwind
             at /rustc/7a9b552cb1621c9c57898d147228aab32b65a7c3/library/std/src/panicking.rs:493:5
   1: std::panicking::begin_panic_fmt
             at /rustc/7a9b552cb1621c9c57898d147228aab32b65a7c3/library/std/src/panicking.rs:435:5
   2: rustc_ast_lowering::LoweringContext::lower_node_id_generic
   3: rustc_ast_lowering::path::<impl rustc_ast_lowering::LoweringContext>::lower_path_segment
   4: core::ops::function::impls::<impl core::ops::function::FnOnce<A> for &mut F>::call_once
   5: rustc_ast_lowering::path::<impl rustc_ast_lowering::LoweringContext>::lower_qpath
   6: rustc_ast_lowering::LoweringContext::lower_ty_direct
   7: rustc_ast_lowering::LoweringContext::lower_fn_decl
   8: rustc_ast_lowering::expr::<impl rustc_ast_lowering::LoweringContext>::lower_expr_closure
   9: rustc_ast_lowering::expr::<impl rustc_ast_lowering::LoweringContext>::lower_expr_mut::{{closure}}
  10: core::ops::function::impls::<impl core::ops::function::FnMut<A> for &mut F>::call_mut
  11: <core::iter::adapters::flatten::Flatten<I> as core::iter::traits::iterator::Iterator>::next
  12: <smallvec::SmallVec<A> as core::iter::traits::collect::Extend<<A as smallvec::Array>::Item>>::extend
  13: rustc_arena::cold_path
  14: rustc_ast_lowering::item::<impl rustc_ast_lowering::LoweringContext>::lower_fn_body_block
  15: rustc_ast_lowering::item::<impl rustc_ast_lowering::LoweringContext>::lower_maybe_async_body
  16: rustc_ast_lowering::item::<impl rustc_ast_lowering::LoweringContext>::lower_item
  17: rustc_ast_lowering::LoweringContext::with_hir_id_owner
  18: <rustc_ast_lowering::item::ItemLowerer as rustc_ast::visit::Visitor>::visit_mod
  19: rustc_ast_lowering::lower_crate
  20: rustc_interface::passes::BoxedResolver::access::{{closure}}
  21: rustc_interface::passes::configure_and_expand::{{closure}}
  22: rustc_interface::passes::BoxedResolver::access
  23: rustc_interface::queries::Queries::lower_to_hir
  24: rustc_interface::queries::Queries::global_ctxt
  25: rustc_interface::queries::<impl rustc_interface::interface::Compiler>::enter
  26: rustc_span::with_source_map
  27: rustc_interface::interface::create_compiler_and_run
  28: rustc_span::with_session_globals
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.51.0-nightly (7a9b552cb 2021-01-12) running on x86_64-unknown-linux-gnu

query stack during panic:
end of query stack
error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.

Bug Labels:
A-closures, C-bug, I-ICE, T-compiler
